--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.12"
   },
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
